# poke_tracker

./: .gitignore  README.md  prompt_from_gpt.md  recommandations.txt
.github/workflows/: scrape.yml
data/errors/: last_run.json
data/events/: notified.json
data/products/: 30th-2pack-blister.json  30th-binder-collection.json  30th-booster-bundle.json  30th-espeon-battle-deck.json  30th-etb.json  30th-greninja-ex-box.json  30th-mini-tin.json  30th-poster-collection.json  (+9 more)
docs/: ADDING_A_SITE.md
scraper/: pyproject.toml
scraper/config/: products.yaml  settings.yaml  sites.yaml
scraper/poketracker/: config.py  main.py
scraper/poketracker/classification/: heuristic_classifier.py  llm_classifier.py
scraper/poketracker/core/: base_scraper.py  http_client.py  models.py  rate_limiter.py  runner.py
scraper/poketracker/diffing/: dedup_store.py  event_detector.py  hashing.py
scraper/poketracker/filtering/: product_matching.py  smart_filter.py
scraper/poketracker/notify/: webpush_sender.py
scraper/poketracker/sites/: amazon_fr.py  bol_com.py  generic_prestashop.py  generic_shopify.py  generic_woocommerce.py  price_parsing.py  registry.py
scraper/poketracker/storage/: json_store.py
scraper/tests/: test_event_detector.py  test_hashing.py  test_product_matching.py  test_smart_filter.py
scraper/tests/fixtures/: dracaugames_products.json  ludifolie_search.html  pokelite_search.html  troll2jeux_search.html
scraper/tests/sites/: test_generic_prestashop.py  test_generic_prestashop_no_microdata.py  test_generic_shopify.py  test_generic_woocommerce.py
(+3 files in other folders)
