[project]
name = "poketracker"
version = "0.1.0"
description = "Pokemon TCG product monitor for French retailers"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "pywebpush>=2.0",
]

[project.optional-dependencies]
llm = ["openai>=1.30"]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.2", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["poketracker*"]
